# ray_tracing_shapely

./: .gitignore  CONTRIBUTING.md  MIGRATION_INSTRUCTIONS.md  NOTICE.txt  README.md  pyproject.toml
.claude/: settings.local.json
dev_doc/roadmap/done/: 04_helper_functions_to_design_prisms.md  08_new_methods_for_refractometer_prisms.md
doc/roadmap/: helper_functions_to_design_prisms.md  new_methods_for_refractometer_prisms.md  ray_lineage_tracking.md  rays_and_geometry_analysis.md  refactor_tools_with_JSON_serializable_data.md  refactoring_of_svg_renderer.md  tools_with_JSON_serializable_data.md  tools_with_JSON_setializable_data.md  various_tools_for_analysis.md
doc/roadmap/done/: 01_various_tools_for_analysis.md  02_refactoring_of_svg_renderer.md  05_tools_with_JSON_serializable_data.md  06_refactor_tools_with_JSON_serializable_data.md  07_agentic_angle_analysis.md  09_agentic_tool_to_calculate_TIR_btw_two_glasses.md
doc/roadmap/proposed/: agentic_angle_analysis.md  agentic_tool_to_calculate_TIR_btw_two_glasses.md  new_methods_for_refractometer_prisms.md  template.md
doc/roadmap/wip/: ray_lineage_tracking.md
notebooks/: abbe_refractometer_example.ipynb  critical_ray_path_refractometer_example.ipynb
src-python/ray_tracing_shapely/: __init__.py
src-python/ray_tracing_shapely/analysis/: __init__.py  agentic_db.py  agentic_tools.py  fresnel_utils.py  glass_geometry.py  lineage_analysis.py  ray_geometry_queries.py  render_result.py  saving.py  simulation_result.py  tool_registry.py
src-python/ray_tracing_shapely/core/: __init__.py  constants.py  equation.py  geometry.py  ray.py  ray_lineage.py  scene.py  simulator.py  svg_renderer.py
src-python/ray_tracing_shapely/developer_tests/: test_grazing_incidence.py  test_phase1_agentic_db.py  test_phase2_schemas_and_lineage.py  test_phase3_render_result.py  test_phase7_agentic_svg_tools.py  (+2 more)
(+56 files in other folders)
