[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ray-tracing-shapely"
version = "0.1.0"
description = "Python ray tracing library using Shapely for computational geometry"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "The Ray Optics Simulation authors and contributors"}
]
keywords = ["ray-tracing", "optics", "simulation", "shapely", "physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "shapely>=2.0.0",
    "sympy>=1.12",
    "numpy>=1.20.0",
    "svgwrite>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/ray_tracing_shapely"
Repository = "https://github.com/YOUR_USERNAME/ray_tracing_shapely"
Documentation = "https://github.com/YOUR_USERNAME/ray_tracing_shapely#readme"

[tool.setuptools]
package-dir = {"" = "src-python"}

[tool.setuptools.packages.find]
where = ["src-python"]
include = ["ray_tracing_shapely*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
